Back up web root too

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress
 MYSQL_PASSWORD=
 MYSQL_RANDOM_ROOT_PASSWORD=true
+
+BACKUP_TEMP_DIR=/tmp/wordpress-backup
+BACKUP_CONTAINER_NAME_WORDPRESS=wordpress
+BACKUP_CONTAINER_NAME_MYSQL=mysql
