Rsync backup files and use healthchecks.io

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ MYSQL_RANDOM_ROOT_PASSWORD=true
 BACKUP_TEMP_DIR=/tmp/wordpress-backup
 BACKUP_CONTAINER_NAME_WORDPRESS=wordpress
 BACKUP_CONTAINER_NAME_MYSQL=mysql
+BACKUP_DESTINATION=host.example.com:/path
